# GoBazel

./: README.md  WORKSPACE.bazel  go.mod  go.sum
projects/hello_bazel/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/hello_bazel/go_web/: BUILD.bazel  main.go
